tests/elab/fail/naked_expression3.t20
;; Naked boolean literal at top level.
#t